--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -676,6 +676,10 @@
     <Compile Include="Migrations\201806041803400_AddIndiciesToUserQuizzes.Designer.cs">
       <DependentUpon>201806041803400_AddIndiciesToUserQuizzes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806150221500_RenameColumnsForEfCoreCompatibility.cs" />
+    <Compile Include="Migrations\201806150221500_RenameColumnsForEfCoreCompatibility.Designer.cs">
+      <DependentUpon>201806150221500_RenameColumnsForEfCoreCompatibility.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -1050,6 +1054,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806041803400_AddIndiciesToUserQuizzes.resx">
       <DependentUpon>201806041803400_AddIndiciesToUserQuizzes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806150221500_RenameColumnsForEfCoreCompatibility.resx">
+      <DependentUpon>201806150221500_RenameColumnsForEfCoreCompatibility.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
