--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/polyfill": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/preset-react": "^7.0.0-beta.40",
-    "@babel/preset-stage-0": "^7.0.0-beta.40",
-    "babel-loader": "^8.0.0-beta.2",
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/polyfill": "7.0.0-beta.51",
+    "@babel/preset-env": "7.0.0-beta.51",
+    "@babel/preset-react": "7.0.0-beta.51",
+    "@babel/preset-stage-0": "7.0.0-beta.51",
+    "babel-loader": "^8.0.0-beta.3",
     "chai": "^4.1.2",
-    "css-loader": "^0.28.10",
-    "html-webpack-plugin": "^3.0.4",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "mocha": "^5.0.1",
+    "mocha": "^5.2.0",
     "prettier": "latest",
     "pretty-quick": "latest",
-    "puppeteer": "0.11.0",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9",
+    "puppeteer": "0.13.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
     "webpack-glob-entries": "^1.0.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.7.2"
   }
 }
