--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -7,7 +7,7 @@
   <package id="AspNetBundling" version="2.0.3.0" targetFramework="net47" />
   <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
-  <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
+  <package id="DotNetZip" version="1.11.0" targetFramework="net47" />
   <package id="Elmah.Contrib.WebApi" version="1.0.10.25" targetFramework="net47" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net47" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net47" />
@@ -47,8 +47,8 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.7.179" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net47" />
@@ -88,12 +88,13 @@
   <package id="Microsoft.Owin.Security.Interop" version="2.0.3" targetFramework="net47" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
-  <package id="Microsoft.Win32.Registry" version="4.4.0" targetFramework="net47" />
+  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
@@ -127,12 +128,12 @@
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net47" />
   <package id="System.Console" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net47" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net47" />
-  <package id="System.Drawing.Common" version="4.5.0-preview1-25914-04" targetFramework="net47" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
@@ -162,14 +163,14 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
-  <package id="System.Security.AccessControl" version="4.4.0" targetFramework="net47" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.ProtectedData" version="4.4.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Xml" version="4.4.0" targetFramework="net47" />
-  <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net47" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net47" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
@@ -180,7 +181,7 @@
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
