--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net47" />
+  <package id="CommandLineParser" version="2.2.1" targetFramework="net47" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net47" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net47" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
@@ -10,10 +10,10 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.Build" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Tasks.Core" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
+  <package id="Microsoft.Build" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Tasks.Core" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.7.179" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net47" />
@@ -25,14 +25,15 @@
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net47" />
@@ -99,6 +100,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.5.24" targetFramework="net47" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
