--- a/src/Notifications/packages.config
+++ b/src/Notifications/packages.config
@@ -9,21 +9,22 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.7.179" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
