--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -4,15 +4,16 @@
   <package id="FluentAssertions" version="4.19.2" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.Build" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Engine" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Tasks.Core" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
+  <package id="Microsoft.Build" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Engine" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Tasks.Core" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.7.179" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
@@ -55,6 +56,7 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.5.24" targetFramework="net47" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
