--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -10,26 +10,27 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.Build" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Engine" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Tasks.Core" version="15.5.180" targetFramework="net47" />
-  <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
+  <package id="Microsoft.Build" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Engine" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Tasks.Core" version="15.7.179" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.7.179" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-rc1-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-rc1-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-rc1-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
@@ -85,6 +86,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.5.24" targetFramework="net47" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
