--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -61,14 +61,14 @@
   <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyModel" version="2.0.3" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-preview2-final" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.0.0" targetFramework="net47" />
