--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -62,7 +62,7 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-preview2-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyModel" version="2.0.3" targetFramework="net47" />
