--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -22,7 +22,7 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net47" />
@@ -32,7 +32,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
