Web.Api: set log's minimumLevel to Information, not Debug

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -8,7 +8,7 @@
     "hostLog": {
         "console": true,
         "pathFormat": "logs/log-{Date}.log",
-        "minimumLevel": "debug"
+        "minimumLevel": "information"
     },
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
     
