--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -148,10 +148,10 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah"/>
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah"/>
     </httpModules>
-    <customErrors mode="On">
-        <error statusCode="404" redirect="/Errors/Error404"/>
-        <error statusCode="500" redirect="/Errors/Error500"/>
-    </customErrors>
+    <!-- <customErrors mode="On"> -->
+    <!--     <error statusCode="404" redirect="/Errors/Error404"/> -->
+    <!--     <error statusCode="500" redirect="/Errors/Error500"/> -->
+    <!-- </customErrors> -->
   </system.web>
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
@@ -593,6 +593,10 @@
         <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
         <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0"/>
       </dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Win32.Registry" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+			<bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.0.0"/>
+		</dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
