И вновь продолжается бой...

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -148,10 +148,10 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah"/>
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah"/>
     </httpModules>
-    <customErrors mode="On">
-        <error statusCode="404" redirect="/Errors/Error404"/>
-        <error statusCode="500" redirect="/Errors/Error500"/>
-    </customErrors>
+    <!-- <customErrors mode="On"> -->
+    <!--     <error statusCode="404" redirect="/Errors/Error404"/> -->
+    <!--     <error statusCode="500" redirect="/Errors/Error500"/> -->
+    <!-- </customErrors> -->
   </system.web>
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
@@ -238,7 +238,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.AspNetCore.Http.Features" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
@@ -246,11 +246,11 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.FileProviders.Abstractions" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.AspNetCore.Http.Abstractions" publicKeyToken="ADB9793829DDAE60" culture="neutral"/>
@@ -595,7 +595,11 @@
       </dependentAssembly>
 		<dependentAssembly>
 			<assemblyIdentity name="Microsoft.Win32.Registry" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-			<bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.0.0"/>
+			<bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0"/>
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.AspNetCore.DataProtection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral"/>
+			<bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0" />
 		</dependentAssembly>
     </assemblyBinding>
   </runtime>
