First version of react application proxing all queries to backend
Not working now: script tags inside pages, i.e. notification settings on /Account/Manage
+ add CORS to Ulearn.Web
+ fix small bug in student-submissions.js
+ add option in appsettings.json to cookie securing setting

--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -15,6 +15,7 @@
     "web": {
         "cookieKeyRingDirectory": "../cookie_protection_keys/",
         "cookieName": "ulearn.auth",
-        "cookieDomain": "localhost"
+        "cookieDomain": "localhost",
+        "cookieSecure": "false"
     }
 }
