--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -220,7 +220,11 @@
 		<clear/>
 		<remove name="X-Powered-By"/>
 		<remove name="X-AspNet-Version"/>
-	  </customHeaders>
+		  
+		<!-- CORS -->
+		<add name="Access-Control-Allow-Origin" value="http://localhost:3000" />
+		<add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS"/>
+	  </customHeaders>		
 	</httpProtocol>
 
     <validation validateIntegratedModeConfiguration="false"/>
