--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -4,6 +4,7 @@
     <RootNamespace>Ulearn.Web.Api</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EntityFrameworkProfiler.Appender" Version="5.0.5024" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
