Ulearn.Web is ready for react application deployment
Pre-build step for Ulearn.Web: building frontend project and copying static files
Fixes and features for react application:
content loading animation
remove bootstrap's modal backdrop
meta and title tags
don't process clicks on links with href="#"

--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -15,7 +15,7 @@
 	<add key="ulearn.coursesDirectory" value="..\..\..\Courses\" />
 
     <!-- Основной адрес, нужен для правильного построения ссылок в уведомлениях. Например, https://ulearn.me -->
-    <add key="ulearn.baseUrl" value="https://localhost:44300" />
+    <add key="ulearn.baseUrl" value="http://localhost:3000" />
 
     <!-- Секретная строка для вычисления секретных хешей. Должен совпадать с аналогичной настройкой в Ulearn.Web/Web.config -->
     <add key="ulearn.secretForHashes" value="AAGaAxFmEUjmiyixyy6VNPsaqc" />
