--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -13,7 +13,7 @@
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
     
     "coursesDirectory": "../Courses/",
-    "baseUrl": "https://localhost:44300",
+    "baseUrl": "http://localhost:3000",
     "telegram": {
         "botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
         "errors": {
