--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -32,6 +32,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "latest",
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
@@ -48,8 +49,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "prop-types": "latest"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
