--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -57,7 +57,7 @@
     <add key="stepik.defaultXQueueName" value="urfu_cs1_testing"/>
 
     <!-- Основной адрес, нужен для правильного построения ссылок в уведомлениях. Например, https://ulearn.me -->
-    <add key="ulearn.baseUrl" value="https://localhost:44300"/>
+    <add key="ulearn.baseUrl" value="http://localhost:3000"/>
 
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
          Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
