--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{        
     "coursesDirectory": "",
-    "baseUrl": "https://localhost:44300",
+    "baseUrl": "http://localhost:3000",
     "telegram": {        
         "botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
         "errors": {
